tests/rustdoc-ui/const-evalutation-ice.stderr
error[E0080]: attempt to compute `0_usize - 1_usize`, which would overflow
  --> $DIR/const-evalutation-ice.rs:10:22
   |
LL | pub const N: usize = 0 - (mem::size_of::<S>() != 400) as usize;
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `N` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
